<resources>
    <string name="app_name">Immobiliaria Cloud</string>
    <string name="title_welcome">Benvinguts...</string>
    <string name="empty_props">No hi ha propietats actualment</string>
    <string name="empty_user_props">No hi ha propietats propies</string>
    <string name="property_list">Llista de propietats</string>
    <string name="detail_property">Propietat en detall</string>
    <string name="icon_login">Iniciar sessió</string>
    <string name="icon_register">Registrar-se</string>
    <string name="icon_logout">Tancar sessió</string>
    <string name="icon_back">Enrere</string>
    <string name="icon_save">Guardar</string>
    <string name="icon_delete">Borrar</string>
    <string name="property_user_list">Les meves propietats</string>
    <string name="form">Afegir una propietat</string>
    <string name="register_name">Registre</string>
    <string name="register_fullname">Nom Complet</string>
    <string name="register_email">Correu Electrònic</string>
    <string name="register_password">Contrasenya</string>
    <string name="register_phone">Telefon movil</string>
    <string name="register_login">Ja estas registrat? Loguejat pitjant aqui</string>
    <string name="register_button">Registrar-se</string>
    <string name="login_name">Iniciar sessió</string>
    <string name="login_register">Si no tens compte, registrar pitjant aqui!</string>
    <string name="error_field_required">Camp obligatori</string>
    <string name="register_user_created">Usuari creat correctament</string>
    <string name="register_user_error">Error al crear l\'usuari</string>
    <string name="register_password_minimum">Minim ha de tenir 6 caracters</string>
    <string name="login_success">Inici de sessió correctament</string>
    <string name="login_error">Inici de sessió incorrecte</string>
    <string name="register_email_sintaxi">Correo electronico incorrecto</string>
    <string name="user_info">Perfil del usuari</string>
    <string name="error_save_user">Error al guardar l\'usuari</string>
    <string name="form_name">Nom</string>
    <string name="form_ubi">Ubicació</string>
    <string name="form_desc">Descripció</string>
    <string name="form_area">Area</string>
    <string name="form_preu">Preu</string>
    <string name="form_equipaments">Equipaments</string>
    <string name="form_error">Error al enviar el formulari</string>
    <string name="form_success">El formulari s\'ha enviat correctament</string>
    <string name="form_photo">Puja una fotografia</string>
    <string name="propietari">Dades del propietari</string>
    <string name="edit_propietat">Editar Propietat</string>
    <string name="qr">Generador QR</string>
    <string name="dialog_message_edit">Segur que vols eliminar la propietat?</string>
    <string name="dialog_yes">Si</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete_title">Eliminar</string>
    <string name="copy">Correu electronic copiat correctament</string>
    <string name="add_propietat">Afegeix Propietat</string>
</resources>