<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_register"
        android:icon="@drawable/ic_baseline_contact_mail_24"
        android:title="@string/icon_register"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/icon_login"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/icon_logout"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>