<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitats.Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="673dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/register_fullname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/register_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/register_phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/register_button"
            android:text="@string/register_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:onClick="toLogin"
            android:text="@string/register_login"
            android:textAlignment="center"
            android:textColor="#A82635"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>